[gd_scene load_steps=6 format=3 uid="uid://r8cfx6hhlvy5"]

[ext_resource type="Texture2D" uid="uid://cxehxc83uwpw7" path="res://Assets/Actors/enemies/impurity.png" id="1_67tbk"]
[ext_resource type="Script" path="res://Scripts/Actors/NPCS/Enemies/Impurity.gd" id="1_vpa55"]
[ext_resource type="PackedScene" uid="uid://cci7teggrridn" path="res://Scenes/Actors/Objects/DamageNumbers.tscn" id="2_085d5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_iohpv"]
radius = 38.0526

[sub_resource type="CircleShape2D" id="CircleShape2D_ddm7b"]
radius = 34.0588

[node name="Impurity" type="CharacterBody2D"]
z_index = 10
collision_layer = 0
collision_mask = 0
motion_mode = 1
script = ExtResource("1_vpa55")
basedamage = 5
damagenumbers = ExtResource("2_085d5")
health = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_iohpv")

[node name="Impurity" type="Sprite2D" parent="."]
texture = ExtResource("1_67tbk")

[node name="SearchTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 34
collision_mask = 69

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_ddm7b")

[node name="StunTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="SearchTimer" to="." method="_on_search_timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="StunTimer" to="." method="unstun"]
